# python-project-83

./: .gitignore  README.md  build.sh  database.sql  pyproject.toml
page_analyzer/: app.py  database.py  html_parser.py  url.py  urls.py  utils.py  validation.py  web.py
page_analyzer/templates/: index.html  layout.html  url.html  urls.html
page_analyzer/templates/partials/: flashes.html
