[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Chawku <chawku.work@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
validators = "^0.34.0"
flask = "^3.0.3"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"